--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>
-        Hello World!
+        About Page
     </h1>
     <p>
         This is a template
     </p>
-</body>
-</html>
+    {{ my_text|capfirst|slugify }}
+    {{ my_number }}
+    <ul>
+    {% for item in my_list %}
+        {% if item == 1 %}
+            <li>{{forloop.counter}} - {{item}}</li>
+        {% elif item == 2 %}
+            <li>{{forloop.counter}} - {{item|add:2}}</li>
+        {% else %}
+            <li>{{forloop.counter}} - {{item|center:'12'}}</li>
+        {% endif %}
+    {% endfor %}
+    </ul>
+{% endblock %}
