--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
     <h1>
-        Hello World!
+        Contacts Page
     </h1>
     <p>
         This is a template
     </p>
-</body>
-</html>
+{% endblock content %}
