blog app completed

--- a/src/templates/blogs/article_detail.html
+++ b/src/templates/blogs/article_detail.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'blogs/base.html' %}
 
 {% block content %}
-
+   <h1> {{object.title}}</h1>
+   <article>{{object.article}}</article>
+   <hr>
+    <h4 style="text-align: right;">{{object.author}}</h4>
 {% endblock %}
