--- a/src/templates/blogs/base.html
+++ b/src/templates/blogs/base.html
@@ -19,7 +19,7 @@
         
     {% endblock %}
     <footer>
-        <h2 style="align-items: center;">Contribute more articles!</h2>
+        <h2 style="align-items: center;"><a href='http://127.0.0.1:8000/blogs/create/'>Contribute!</a></h2>
     </footer>
 </body>
 </html>
