--- a/src/templates/blogs/article_list.html
+++ b/src/templates/blogs/article_list.html
@@ -1,5 +1,7 @@
 {% extends 'blogs/base.html' %}
 
 {% block content %}
-    <p>list</p>
+    {% for article in obj_list %}
+        <h1>{{ article.id }} -<a href='{{ article.get_absolute_url }}'>{{article.title}}</a></h1>
+        {% endfor %}
 {% endblock %}
