--- a/src/templates/blog/article_list.html
+++ b/src/templates/blog/article_list.html
@@ -1,7 +1,7 @@
-{% extends 'blogs/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-    {% for article in obj_list %}
+    {% for article in object_list %}
         <h1>{{ article.id }} -<a href='{{ article.get_absolute_url }}'>{{article.title}}</a></h1>
         {% endfor %}
 {% endblock %}
